Define stlying for plone.app.multlingual based on ftw.theming.

--- a/plonetheme/onegovbear/theme/scss/site/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/site/portaltop.scss
@@ -29,3 +29,12 @@
   @extend .fa-icon;
   @extend .fa-user;
 }
+
+#portal-languageselector {
+  @include tab-list();
+  .currentLanguage {
+    a {
+      @include tab-select();
+    }
+  }
+}
