--- a/plonetheme/onegovbear/theme/scss/site/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/site/portaltop.scss
@@ -7,7 +7,7 @@
   max-width: $max-width-page;
   margin: 0 auto;
   .actionMenuHeader > a {
-    @include auto-link-color($color-secondary);
+    @include auto-link-color($color-primary);
   }
 }
 
