Fix the link color of the content action menu based on the background color of the editbar.

--- a/plonetheme/onegovbear/theme/scss/site/editbar.scss
+++ b/plonetheme/onegovbear/theme/scss/site/editbar.scss
@@ -13,7 +13,7 @@
   @include list-horizontal($direction: rtl);
 
   .actionMenuHeader a {
-    @include auto-text-color($color-secondary);
+    @include auto-text-color($color-edit);
   }
 
 }
