--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -3,13 +3,10 @@ $pathbar-arrow-color: #fff !default;
 $pathbar-text-color: $text-color !default;
 $pathbar-font-weight: normal !default;
 
-@include declare-variables(
-  pathbar-bg-color,
-  pathbar-arrow-color,
-  pathbar-text-color);
+@include declare-variables(pathbar-bg-color, pathbar-arrow-color, pathbar-text-color);
 
 .template-startpage #breadcrumbs-wrapper,
-body.portaltype-ftw-subsite-subsite #breadcrumbs-wrapper{
+body.portaltype-ftw-subsite-subsite #breadcrumbs-wrapper {
   margin-top: 2em;
 }
 
@@ -17,8 +14,9 @@ body.portaltype-plone-site,
 body.portaltype-ftw-subsite-subsite {
   #breadcrumbs-wrapper {
     margin-bottom: 0;
+
     #portal-breadcrumbs {
-      display:none;
+      display: none;
     }
   }
 }
@@ -26,7 +24,7 @@ body.portaltype-ftw-subsite-subsite {
 #breadcrumbs-wrapper {
   margin-top: 1em;
   margin-bottom: 2em;
-  display:none;
+  display: none;
 
   #breadcrumbs-you-are-here {
     visibility: hidden;
@@ -37,20 +35,27 @@ body.portaltype-ftw-subsite-subsite {
   #portal-breadcrumbs {
     width: 100%;
     background-color: $pathbar-bg-color;
-    @include clearfix();
-    > span {
-      float: left;
-      > a {
+
+    @include clearfix;
+
+    ul {
+      @include ul(inline);
+    }
+
+    li {
+      a {
         display: block;
         color: $pathbar-text-color;
         padding: 6px;
         font-weight: $pathbar-font-weight;
         font-size: $font-size-small;
         float: left;
+
         &:hover {
           color: $link-hover-color;
         }
       }
+
       // White separator between pathbar lines
       &:before {
         content: "";
@@ -61,7 +66,8 @@ body.portaltype-ftw-subsite-subsite {
         height: 2px;
         margin-top: -1px;
       }
-      > .breadcrumbSeparator {
+
+      .breadcrumbSeparator {
         display: block;
         float: left;
         width: 18px;
@@ -76,4 +82,3 @@ body.portaltype-ftw-subsite-subsite {
     display: block;
   }
 }
-
