--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -40,6 +40,7 @@ body {
   .logoRow {
     box-sizing: border-box;
     padding: 30px 0;
+    @include clearfix;
     > .cell {
       display: table;
     }
