Implement zoom buttons.
Place zoom buttons in the portal top section according to this change request:
https://extranet.4teamwork.ch/kunden/0141-stadt-bern/0141.01-id/0141-01-projekt-relaunch-internet-www-bern.ch/Relaunch%20Internet%20Stadt%20Bern_Change%20Request%20Nr.1.pdf/view

--- a/plonetheme/onegovbear/theme/scss/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/portaltop.scss
@@ -18,3 +18,43 @@ $portal-top-bg-color: $page-bg-color !default;
     background-color: $portal-top-bg-color;
   }
 }
+
+.zoom-buttons {
+  @include list-horizontal();
+  float: left;
+  margin-left: 2em;
+
+  > li {
+    display: inline-block;
+    float: none;
+    > a {
+      padding: 0;
+      padding-right: .2em;
+    }
+  }
+}
+
+.zoom-button {
+  color: $text-color;
+
+  &:hover {
+    color: $text-color;
+    text-decoration: none;
+  }
+
+  &:before {
+    content: "A";
+  }
+}
+
+#zoom-small {
+  font-size: 1em;
+}
+
+#zoom-medium {
+  font-size: 1.2em;
+}
+
+#zoom-large {
+  font-size: 1.4em;
+}
