--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -22,9 +22,14 @@ body.portaltype-ftw-subsite-subsite {
 }
 
 #breadcrumbs-wrapper {
-  margin-top: 1em;
+  @include screen-small() {
+    margin-top: 1em;
+    @include gridposition(0);
+    @include gridwidth(16);
+  }
   margin-bottom: 2em;
-  display: none;
+  margin-left: -100%;
+  width: 100%;
 
   #breadcrumbs-you-are-here {
     visibility: hidden;
@@ -48,8 +53,9 @@ body.portaltype-ftw-subsite-subsite {
         color: $pathbar-text-color;
         padding: 6px;
         font-weight: $pathbar-font-weight;
-        font-size: $font-size-small;
         float: left;
+        font-size: 14px;
+        line-height: 19px;
 
         &:hover {
           color: $link-hover-color;
@@ -78,6 +84,25 @@ body.portaltype-ftw-subsite-subsite {
         font-size: 1.4em;
         padding-top: 7px;
         box-sizing: border-box;
+      }
+    }
+
+    #breadcrumbs-home > a {
+      @extend .fa-icon;
+      @extend .fa-home;
+      font-size: 0;
+
+      &:before {
+        font-size: 14px;
+        float: left;
+      }
+
+      @include screen-small() {
+        font-size: 14px;
+
+        &:before {
+          font-size: 0;
+        }
       }
     }
   }
