Add support for googles sitelinks searchbox.

--- a/plonetheme/onegovbear/theme/scss/search.scss
+++ b/plonetheme/onegovbear/theme/scss/search.scss
@@ -106,3 +106,7 @@ $searchbox-width: 295px;
 .highlightedSearchTerm {
   background-color: $search-highlight-bg-color;
 }
+
+#portal-sitesearch {
+  display: none;
+}
