Support the new html structure of the "current folder" item in the autocompletewidget.

--- a/plonetheme/onegovbear/theme/scss/search.scss
+++ b/plonetheme/onegovbear/theme/scss/search.scss
@@ -81,7 +81,7 @@ $searchbox-width: 295px;
       max-width: 500px;
     }
 
-    > li > a {
+    > li > a, > li > span:not(.group) {
       border-color: $gray-light;
 
       &.ui-state-focus, &:hover, &:visited:hover {
