Fix left margin of external link

--- a/plonetheme/onegovbear/theme/scss/iconset.scss
+++ b/plonetheme/onegovbear/theme/scss/iconset.scss
@@ -58,6 +58,7 @@
       -ms-transform: rotate(45deg);
       -webkit-transform: rotate(45deg);
       margin-right: -0.35em;
+      margin-left: -0.1em;
     }
   }
 }
