Hide the additional logo if the class ".hide" is present.
This applies to mobile screens only. The class may be set through JavaScript in the policy.

Partially closes https://github.com/4teamwork/bern.web/issues/1209

--- a/plonetheme/onegovbear/theme/scss/additionallogo.scss
+++ b/plonetheme/onegovbear/theme/scss/additionallogo.scss
@@ -2,6 +2,13 @@
 
   float: right;
 
+  &.hide {
+    visibility: hidden;
+    @include screen-small {
+      visibility: visible;
+    }
+  }
+
   img {
     max-height: 50px;
     width: auto;
