Remove additional spacing underneath the additional logo on subsites.
Closes https://github.com/4teamwork/bern.web/issues/1214

--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -7,7 +7,9 @@ $pathbar-font-weight: normal !default;
 
 .template-startpage #breadcrumbs-wrapper,
 body.portaltype-ftw-subsite-subsite #breadcrumbs-wrapper {
-  margin-top: 2em;
+  @include screen-small {
+    margin-top: 2em;
+  }
 }
 
 body.portaltype-plone-site,
