Implement skrollr to have sticky background at a certain point.
The first 40 pixels of the backgroundimage are covered by the portal-top
container. So use the skrollr to have the sticky background at this certain point.

--- a/plonetheme/onegovbear/theme/scss/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/portaltop.scss
@@ -3,6 +3,11 @@ $portal-top-bg-color: $page-bg-color !default;
 @include declare-variables(
   portal-top-bg-color);
 
+#portal-top-wrapper {
+  @include screen-large {
+    background-color: white;
+  }
+}
 
 #portal-top {
   background-color: $primary-color;
@@ -14,8 +19,8 @@ $portal-top-bg-color: $page-bg-color !default;
   @include clearfix();
 
   @include screen-large {
+    background-color: white;
     padding: 7px 0;
-    background-color: $portal-top-bg-color;
   }
 }
 
