--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -11,7 +11,7 @@ $page-wrapper-width: 1200px !default;
 }
 
 body {
-  background: $page-bg-color;
+  background-color: $page-bg-color;
   font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: $line-height-base;
