--- a/plonetheme/onegovbear/theme/scss/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/portaltop.scss
@@ -37,13 +37,14 @@ $portal-top-bg-color: $page-bg-color !default;
 
   > li {
     display: inline-block;
+    vertical-align: text-top;
     float: none;
     > a {
       padding: 0;
       padding-right: .2em;
       width: 0.7em;
       display: block;
-      height: 0
+      height: 0;
     }
   }
 }
