--- a/plonetheme/onegovbear/theme/scss/simplelayout.scss
+++ b/plonetheme/onegovbear/theme/scss/simplelayout.scss
@@ -173,3 +173,7 @@ ul[class^="sl-toolbar"] {
 .icons-on .sl-image .colorboxLink:before{
   margin-bottom: 1em;
 }
+
+.sl-image .imageContainer > a {
+  max-width: 100%;
+}
